# quickDraw

./: .gitignore  Cargo.toml  README.md  rubine_githubcom_REVIEW.md
.github/instructions/: *.instructions.md
assets/: index.html
docs/: ARCHITECTURE.md  CONVENTIONS.md  DESIGN_OVERVIEW.md  REPO_MAP.md
docs/components/: gesture_engine.md  input_capture.md  output_actions.md
docs/tasks/: rubine_multi_CLI_REVIEW.md  rubine_solo_CLI_REVIEW.md  task1.md  task10.md  task11.md  task12.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md  task8a.md  task8b.md  task9.md  task_add_doctests.md  task_backend_capture_fix.md  task_gesture_edit_improvements.md  task_gesture_trace_display.md  task_gui_desktop_overhaul.md  task_gui_velocity_length_filters.md  task_hook_backend.md  task_hot_reload.md  task_input_decoupling.md  task_multiple_templates.md  task_repo_map_generator.md  task_repo_map_generator_REVIEW.md  task_rubine.md  task_rubine_recognizer.md  task_trace_finesse.md  task_ui_bubbling_fix.md  task_update_rubine_pr.md  task_velocity_length_filter.md
src/: config.rs  lib.rs  main.rs  pipeline.rs  types.rs
src/audio/: mod.rs
src/gesture/: dollar_one.rs  mod.rs  rubine.rs
src/input/: hook.rs  mod.rs  raw_input.rs
src/output/: keyboard.rs  mod.rs
src/server/: handlers.rs  mod.rs
src/tray/: mod.rs
src/ui/: trace.rs
tools/repo_map_generator/: Cargo.toml
tools/repo_map_generator/src/: main.rs
