[package]
name = "quickdraw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quickdraw"
path = "src/main.rs"

[dependencies]
# Win32 API bindings (Raw Input, SendInput, tray integration)
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
] }

# Async runtime, channels, task spawning
tokio = { version = "1", features = ["full"] }

# Serialization for IPC messages
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file parsing
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System tray icon
tray-icon = "0.17"

# WebSocket server
tokio-tungstenite = "0.23"

# HTTP server (serves config UI static files)
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3.32"


